fix(prod-overhaul): full security + infrastructure hardening
SECURITY:
- SecurityConfig: strict RBAC, deny-by-default, CSRF enabled for browser,
  disabled only for stateless API/WS paths, explicit CORS whitelist,
  security headers (HSTS/CSP/X-Frame-Options), fail-fast on missing creds
- StompWebSocketConfig: explicit CORS whitelist, 10s heartbeat, message size limits
- PlainWebSocketConfig: auth check on WS handshake, ConcurrentWebSocketSessionDecorator
  with 256KB buffer + 15s send deadline, last-value reconnect cache
- TradingController: removed @CrossOrigin('*'), added @PreAuthorize defense-in-depth,
  kill-switch guards on engine restart, new /kill-switch/state and /clear endpoints

INFRASTRUCTURE:
- start.sh: PostgreSQL if DATABASE_URL set (Flyway enabled), H2 only in dev,
  observer binds 127.0.0.1:8766 (single-port fix), secret validation on prod startup,
  JVM heap tuned 128m/380m for 512MB Render container
- application-prod.yml: PostgreSQL required, Flyway enabled, HikariCP tuned (5 max conn),
  H2 console disabled, actuator surface minimized, show-details=never
- render.yaml: CORS_ALLOWED_ORIGINS env var, OBSERVER_SECRET secret, correct JVM flags
- observer.py: binds 127.0.0.1 only, token-based WS auth (timing-safe compare),
  scrubbed ntfy content (no financial data), asyncio.timeout(5) on ntfy calls

TRADING SAFETY:
- KillSwitchEngine: DB-persisted (PostgreSQL primary), restoreFromDatabase() on startup
  so kill switch survives container restart, file as tertiary fallback
- V6__Kill_Switch_Persistent.sql: Flyway migration for kill_switch_log table